deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jailbot
spec:
  replicas: 1
  template:
    spec:
      restartPolicy: Always
      containers:
      - name: jailbot
        image: bluetrack/jailbot:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /data
          subPath: jailbot_data
      
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: jailbot-data
