deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jailbot
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
